--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,12 +1,3 @@
-//<MIXINS>======================================================================================
-@import "mixins";
-//</MIXINS>======================================================================================
-//<FONTS>=======================================================================================
-
-//<Connecting fonts>============================================================================
-//&display=swap
-@import "fonts";
-//</Connecting fonts>============================================================================
 
 //<Icons Fonts>=================================================================================
 //@import "icons";
@@ -22,7 +13,7 @@
 $minWidth: 320px;
 $maxWidth: 1920;
 $maxWidthContainer: 1460;
-$md1: 1460 +12;
+$md1: 1460;
 $md2: 991.98;
 $md3: 767.98;
 $md4: 479.98;
@@ -31,19 +22,29 @@ $second-color: #FFCC00;
 //</VARIABLES>====================================================================================
 
 //<NULL, COMMON PARAMETERS>========================================================================
-@import "null";
+@import "base/null";
 body {
+	background-color: #F8FAFF;
 	color: #000;
-	font-style: 14px;
+	font-size: 14px;
 	&._lock {
 		overflow: hidden;
 	}
 }
 //</NULL, COMMON PARAMETERS>========================================================================
 
+//<cover>===================================================================================
+@import "blocks/header";
+@import "blocks/promo";
+@import "blocks/main";
+@import "blocks/services";
+
+//</cover>===================================================================================
+
+
 //<MAIN LAYOUT>=================================================================================
 .container {
-	min-width: 1480;
+	max-width: 1480px;
 	padding: 0 10px;
 	margin: 0 auto;
 	@media (max-width: $md1) {
