--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,13 +33,16 @@ body {
 }
 //</NULL, COMMON PARAMETERS>========================================================================
 
-//<cover>===================================================================================
+//<blocks>===================================================================================
 @import "blocks/header";
 @import "blocks/promo";
 @import "blocks/main";
 @import "blocks/services";
-
-//</cover>===================================================================================
+@import "blocks/common";
+@import "blocks/about";
+@import "blocks/contact";
+@import "blocks/reviews";
+//</blocks>===================================================================================
 
 
 //<MAIN LAYOUT>=================================================================================
