--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,6 +42,9 @@ body {
 @import "blocks/about";
 @import "blocks/contact";
 @import "blocks/reviews";
+@import "blocks/choice";
+@import "blocks/brands";
+@import "blocks/areas";
 //</blocks>===================================================================================
 
 
