--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -76,6 +76,11 @@
 			font-size: 24px;
 			text-transform: uppercase;
 			color: $first-color;
+			&:hover {
+				color: #FFFFFF;
+				background: $first-color;
+				border: solid 2px #FFFFFF;
+			}
 		}
 	}
 }
