--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -47,6 +47,7 @@
 	&_wrapper {
 		display: flex;
 		margin-top: 15px;
+		justify-content: space-between;
 	}
 	&_class {
 		margin-right: 110px;
@@ -104,6 +105,7 @@
 		}
 		&_descr {
 			display: flex;
+			justify-content: space-between;
 			min-height: 161px;
 			padding-top: 15px;
 			color: $first-color;
