--- a/src/scss/blocks/areas.scss
+++ b/src/scss/blocks/areas.scss
@@ -6,8 +6,11 @@
 	}
 	&_list {
 		width: 50%;
-		li {
+		ol {
 			list-style-type: none;
+			position: relative;
+		}
+		li {
 			border-top: 1px solid rgba($color: $first-color, $alpha: 0.6);
 			font-family: 'Inter';
 			font-weight: 400;
@@ -16,6 +19,11 @@
 			text-align: right;
 			text-transform: uppercase;
 			color: $first-color;
+			span {
+				font-size: 16px;
+				position: absolute;
+				left: 0;
+			}
 		}
 	}
 }
