--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -1,7 +1,8 @@
 .contact {
 	margin-top: 120px;
 	height: 600px;
-	padding: 60px 70px 70px 70px;
+	padding-top: 60px;
+	padding-bottom: 60px;
 	background-color: $first-color;
 	&_title {
 		color: #FFFFFF;
