--- a/src/scss/blocks/main.scss
+++ b/src/scss/blocks/main.scss
@@ -3,4 +3,45 @@
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	.container {
+		display: flex;
+		justify-content: flex-end;
+		height: 646px;
+	}
+	.form {
+		width: 365px;
+		padding: 87px 15px;
+		height: 100%;
+		background: rgba($color: #FFFFFF, $alpha: .8);
+		color:$first-color;
+		.button {
+			width: 100%;
+		}
+		&_title {
+			font-size: 26px;
+		}
+		&_item {
+			margin-top: 20px;
+		}
+		&_input {
+			color:$first-color;
+			font-size: 18px;
+			padding: 15px;
+			width: 100%;
+			height: 40px;
+			background-color: rgba($color: #FFFFFF, $alpha: .6);
+			&::placeholder {
+				font-family: 'Open Sans';
+				font-weight: 400;
+				font-size: 14px;
+				text-transform: uppercase;
+				color: $first-color;
+				opacity: 0.8;
+			}
+		}
+		textarea {
+			min-height: 182px;
+			resize: none;
+		}
+	}
 }
