--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -13,11 +13,11 @@
 	}
 	&_wrapper {
 		display: flex;
-		padding: 40px 0;
 		min-height: 390px;
 	}
 	&_images {
 		display: flex;
+		padding: 40px 0;
 		gap: 14px;
 		margin-right: 15px;
 		img {
@@ -29,17 +29,9 @@
 	}
 	&_form {
 		position: relative;
+		padding: 40px 0;
 		padding-left: 15px;
-		&::before {
-			content:"";
-			position: absolute;
-			background-color: #FFFFFF;
-			height: 400px;
-			width: 1px;
-			opacity: 0.6;
-			left: 0px;
-			top: -40px;
-		}
+		border-left: 1px solid rgba($color: #FFFFFF, $alpha: 0.6);
 		&_title {
 			font-family: 'Fjalla One';
 			font-weight: 400;
