--- a/src/scss/blocks/main.scss
+++ b/src/scss/blocks/main.scss
@@ -1,14 +1,12 @@
 .main {
-	height: 646px;
+	min-height: 646px;
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center center;
-	.container {
-		display: flex;
-		justify-content: flex-end;
-		height: 646px;
-	}
 	.form {
+		position: relative;
+		right: -75%;
+		margin-right: 15px;
 		width: 365px;
 		padding: 87px 15px;
 		height: 100%;
