--- a/src/scss/blocks/partners.scss
+++ b/src/scss/blocks/partners.scss
@@ -1,16 +1,22 @@
 .partners {
 	margin-top: 120px;
+	.line {
+		margin-top: 30px;
+	}
 	&_list {
 		display: grid;
-		margin-left: 745px;
+		width: 50%;
+		position: relative;
+		right: -50%;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(3, 91px);
-		
+
 	}
 	&_icon {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border-bottom: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-bottom: 1px solid $first-color;
+
 	}
 }
