--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -28,6 +28,7 @@
 		display: block;
 		margin-top: 15px;
 		font-size: 16px;
+		color: $first-color;
 	}
 	&_info {
 		width: 100%;
@@ -78,6 +79,9 @@
 		font-size: 16px;
 		li {
 			margin-bottom: 10px;
+			a {
+				color: $first-color;
+			}
 		}
 	}
 	&_authorship {
