--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -41,9 +41,9 @@
 		display: flex;
 		justify-content: space-between;
 	}
-	&_class {
-		margin-right: 110px;
-	}
+	// &_class {
+	// 	margin-right: 110px;
+	// }
 	&_subtitle {
 		font-family: 'Open Sans';
 		font-weight: 600;
@@ -54,9 +54,12 @@
 	}
 	&_img {
 		display: none;
-		max-width: 100%;
+		max-height: 210px;
 		margin: 15px 0px;
 		object-fit: contain;
+		position: absolute;
+		top: -10px;
+		left: -375px;
 	}
 	&_items {
 		width: 730px;
@@ -107,6 +110,7 @@
 			font-size: 14px;
 			line-height: 17px;
 			gap: 15px;
+			position: relative;
 			display: none;
 			span {
 				display: block;
