--- a/src/scss/blocks/main.scss
+++ b/src/scss/blocks/main.scss
@@ -3,7 +3,7 @@
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center center;
-	.form {
+	.main-form {
 		position: relative;
 		right: -75%;
 		margin-right: 15px;
