--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,10 +46,15 @@ body {
 @import "blocks/areas";
 @import "blocks/partners";
 @import "blocks/footer";
-@import "blocks/services/service-main";
-@import "blocks/services/problems";
-@import "blocks/services/service-brands";
-@import "blocks/services/book-service";
+@import "blocks/form";
+@import "blocks/service-main";
+@import "blocks/service-problems";
+@import "blocks/service-brands";
+@import "blocks/service-book";
+@import "blocks/service-questions";
+@import "blocks/areas-promo";
+@import "blocks/areas-repair";
+@import "blocks/book-a-service";
 //</blocks>===================================================================================
 
 
