--- a/src/scss/blocks/service-book.scss
+++ b/src/scss/blocks/service-book.scss
@@ -23,14 +23,16 @@
 		font-weight: 400;
 		color: #FFFFFF;
 	}
-	&_subscr {
+	&_descr {
+		padding-bottom: 15px;
 		font-size: 26px;
 		line-height: 130%;
+		border-bottom: 1px solid rgba($color: #FFFFFF, $alpha: 0.6);
 	}
 	&_text{
 		display: flex;
 		gap: 15px;
-		margin-top: 40px;
+		margin-top: 20px;
 		font-size: 16px;
 		line-height: 120%;
 		span {
