Added media for 1460 px; fix bags

--- a/src/scss/blocks/book-a-service.scss
+++ b/src/scss/blocks/book-a-service.scss
@@ -1,6 +1,5 @@
 .book-a-service {
 	padding-top: 80px;
-	padding-bottom: 80px;	
 	.title {
 		text-align: center;
 		font-size: 96px;
@@ -9,7 +8,7 @@
 	.form {
 		padding-top: 50px;
 		width: 730px;
-		margin: 0 auto;
+		margin: 0 auto 70px auto;
 		&_input {
 			margin-top: 20px;
 			height: 25px;
