--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -21,8 +21,9 @@
 	}
 	&_item {
 		position: relative;
-		height: 314px;
+		height: 100%;
 		padding-right: 20px;
+		padding-bottom: 10px;
 		&::before{
 			content: "";
 			position: absolute;
