Converted to grid-system section services, added mixins

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@ $second-color: #FFCC00;
 
 //<NULL, COMMON PARAMETERS>========================================================================
 @import 'base/null';
+@import 'base/mixins';
 body {
 	background-color: #F8FAFF;
 	color: $first-color;
