--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -34,109 +34,94 @@
 		display: flex;
 		flex-direction: column;
 	}
-	.null_margin {
-		margin: 0;
+	&_item {
+		margin-top: 5px;
+		padding-top: 15px;
+		position: relative;
+		display: grid;
+		grid-template-columns: 345px 365px 340px;
+		grid-template-rows: 24px 160px 40px 1px;
+		gap: 15px;
 	}
-	&_wrapper {
-		display: flex;
-		justify-content: space-between;
-	}
-	&_subtitle {
+	&_name {
 		font-family: 'Open Sans';
 		font-weight: 600;
 		font-size: 18px;
 		line-height: 20px;
 		color: $first-color;
-		margin-top: 20px;
+	}
+	&_subtitle {
+		font-family: 'Open Sans';
+		font-weight: 400;
+		font-size: 18px;
+		color: $first-color;
+	}
+	&_plus {
+		float: right;
+		width: 24px;
+		height: 24px;
+		cursor: pointer;
+		&::before,
+		&::after {
+		content: "";
+		position:absolute;
+		top: 26px;
+		width: 24px;
+		height: 2px;
+		background-color:$first-color;
+		transition: transform 0.3s ease 0s;
+		}
+		&::after {
+			transform: rotate(-90deg);
+		}
+		&_wrapper {
+			padding-top: 15px;
+			padding-right: 5px;
+		}
 	}
 	&_img {
-		display: none;
+		padding-top: 5px;
 		max-height: 210px;
-		margin: 15px 0px;
 		object-fit: contain;
-		position: absolute;
-		top: -10px;
-		left: -365px;
+		display: none;
 	}
-	&_items {
-		width: 730px;
-	}
-	&_item {
-		display: flex;
-		flex-direction: column;
-		&_name {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 15px 0;
-			position: relative; 
-			width: 100%;
-		}
-		&_subtitle {
-			font-family: 'Open Sans';
-			font-weight: 400;
-			font-size: 18px;
-			color: $first-color;
-		}
-		&_plus {
-			width: 24px;
-			height: 24px;
-			cursor: pointer;
-			&::before,
-			&::after {
-			content: "";
-			position:absolute;
-			top: 26px;
-			width: 24px;
-			height: 2px;
-			background-color:$first-color;
-			transition: transform 0.3s ease 0s;
-			}
-			&::after {
-				transform: rotate(-90deg);
-			}
-		}
-		&_descr {
-			display: flex;
-			justify-content: space-between;
-			min-height: 161px;
-			color: $first-color;
-			text-align: justify;
-			font-family: 'Open Sans';
-			font-weight: 400;
-			font-size: 14px;
-			line-height: 17px;
-			gap: 15px;
-			position: relative;
-			display: none;
-			span {
-				display: block;
-				width: 50%;
-			}
-		}
+	&_text {
+		padding-bottom: 25px;
+		color: $first-color;
+		text-align: justify;
+		font-family: 'Open Sans';
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 17px;
+		display: none;
 	}
 	&_button {
+		grid-column-start: 3;
+		grid-column-end: 4;
 		display: none;
-		margin: 15px 0px;
-		padding: 9px 114px;
-		width: 350px;
-		height: 40px;
-		background: $first-color;
-		border-radius: 50px;
-		font-family: 'Fjalla One';
-		font-weight: 400;
-		font-size: 26px;
-		line-height: 26px;
-		text-align: center;
-		text-transform: uppercase;
-		color: #FFFFFF;
-		align-self: flex-end;
-		transition: all 0.3s;
-		&:hover {
-			background: #FFFFFF;
-			color: $first-color;
-			border: 2px solid $first-color;
+		.button {
+			margin: 0;
+			padding: 7px 100px;
+			height: 40px;
+			background: $first-color;
+			border-radius: 50px;
+			font-family: 'Fjalla One';
+			font-weight: 400;
+			font-size: 26px;
+			line-height: 26px;
+			text-align: center;
+			text-transform: uppercase;
+			color: #FFFFFF;
+			transition: all 0.3s;
+			&:hover {
+				background: #FFFFFF;
+				color: $first-color;
+				border: 1px solid $first-color;
+			}
 		}
 	}
+	.line {
+		grid-column-start: 2;
+		grid-column-end: 4;
+	}
 }
-
