--- a/src/scss/blocks/areas-promo.scss
+++ b/src/scss/blocks/areas-promo.scss
@@ -13,8 +13,8 @@
 	.form {
 		width: 410px;
 		padding: 50px 30px 20px 30px;
-		border-right: 1px solid rgba($color: $first-color, $alpha: 0.6);
-		border-left: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-right: $border;
+		border-left: $border;
 	}
 	&_text {
 		width: 360px;
