--- a/src/scss/blocks/areas-repair.scss
+++ b/src/scss/blocks/areas-repair.scss
@@ -13,7 +13,7 @@
 		width: 1100px;
 		display: flex;
 		justify-content: space-between;
-		border-bottom: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-bottom: $border;
 	}
 	&_subtitle {
 		font-family: 'Open Sans';
