--- a/src/scss/blocks/areas.scss
+++ b/src/scss/blocks/areas.scss
@@ -12,7 +12,7 @@
 		}
 	}
 	&_city {
-		border-top: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-top: $border;
 		font-family: 'Inter';
 		font-weight: 400;
 		font-size: 30px;
