--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -80,7 +80,7 @@
 			min-height: 180px;
 			padding-bottom: 35px;
 			padding-top: 20px;
-			border-left: 1px solid rgba($color: $first-color, $alpha: 0.6);
+			border-left: $border;
 		}
 	}
 	&_contacts {
