--- a/src/scss/blocks/promo.scss
+++ b/src/scss/blocks/promo.scss
@@ -11,7 +11,7 @@
 	}
 	&_descr {
 		padding: 38px 0px 18px 15px;
-		border-left: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-left: $border;
 		p {
 			max-width: 350px;
 			text-align: justify;
