--- a/src/scss/blocks/service-main.scss
+++ b/src/scss/blocks/service-main.scss
@@ -2,29 +2,28 @@
 	margin-top: 73px;
 	min-width: 900px;
 	.container {
-		display: flex;
-		gap: 15px;
+		display: grid;
+		grid-template-columns: 800px auto;
+		grid-template-rows: 290px 270px;
+		column-gap: 15px;
+		row-gap: 300px;
 	}
 	.title {
 		font-size: 98px;
 		line-height: 98px;
 	}
 	.form {
-		height: 270px;
-		border-top: 1px solid rgba($color: $first-color, $alpha: 0.6);
-		border-bottom: 1px solid rgba($color: $first-color, $alpha: 0.6);
+		border-top: $border;
+		border-bottom: $border;
 	}
 	.button {
 		margin-top: 30px;
 	}
 	&_img {
+		grid-row-start: 1;
+		grid-row-end: 3;
 		display: block;
 		object-fit: contain;
-	}
-	&_descr {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
 	}
 	&_text {
 		margin-top: 5px;
