--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@ $md3: 767.98;
 $md4: 479.98;
 $first-color: #0C0E5D;
 $second-color: #FFCC00;
+$border: 1px solid rgba($color: $first-color, $alpha: 0.6);
 //</VARIABLES>====================================================================================
 
 //<NULL, COMMON PARAMETERS>========================================================================
