--- a/src/scss/blocks/choice.scss
+++ b/src/scss/blocks/choice.scss
@@ -18,7 +18,7 @@
 		width: 33.333%;
 		max-width: 350px;
 		padding: 15px;
-		height: 350px;
+		min-height: 350px;
 		border: 1px solid rgba(34, 35, 37, 0.6);
 		border-radius: 6px;
 		margin-right: 15px;
