--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -4,39 +4,44 @@
 		justify-content: space-between;
 		align-items: center;
 		height: 102px;
-		padding: 13px 70px;
+		padding: 0px 70px;
 	}
 	&_menu {
 		display: flex;
 		justify-content: space-between;
+		min-width: 55%;
+		&_link {
+			color: $first-color;
+			font-family: 'Fjalla One';
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 33px;
+			text-transform: uppercase;
+			color: $first-color;
+			z-index: 10;
+		}
 	}
 	.logo {
 		height: 49px;
 		width: 85px;
+		position: relative;
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
 	}
 	.menu {
-		display: flex;
-		justify-content: space-between;
-		min-width: 517px;
-		margin-right: 67px;
-		font-family: 'Fjalla One';
-		font-weight: 400;
-		font-size: 15px;
-		line-height: 33px;
-		text-transform: uppercase;
-		color: $first-color;
-		&_item {
-			margin-right: 30px;
-		}
-		&_link {
-			color: $first-color;
-		}
+		display: none;
 	}
 	&_contacts{
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		width: 130px;
+		min-width: 131px;
 	}
 	&_phone {
 		font-family: 'Fjalla One';
@@ -47,8 +52,10 @@
 	}
 	&_line {
 		width: 100%;
-		height: 1px;
-		background-color: $first-color;
-		opacity: 0.6;
+	}
+	.hamburger {
+		display: none;
 	}
 }
+
+
