--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@ $minWidth: 320px;
 $maxWidth: 1920;
 $md1: 1460;
 $md2: 991.98;
-$md3: 767.98;
+$md3: 639.98;
 $md4: 479.98;
 $first-color: #0C0E5D;
 $second-color: #FFCC00;
@@ -57,6 +57,7 @@ body {
 @import "blocks/areas-promo";
 @import "blocks/areas-repair";
 @import "blocks/book-a-service";
+@import "blocks/header-media";
 //</blocks>===================================================================================
 
 
@@ -65,16 +66,16 @@ body {
 	max-width: 1600px;
 	padding: 0 70px;
 	margin: 0 auto;
-	@media (max-width: ($md1 + px)) {
-		min-width: 970px;
-	}
-	@media (max-width: ($md2 + px)) {
-		min-width: 750px;
-	}
-	@media (max-width: ($md3 + px)) {
-		min-width: none;
-		padding: 0 10px;
-	}
+	// @media (max-width: ($md1 + px)) {
+	// 	min-width: 970px;
+	// }
+	// @media (max-width: ($md2 + px)) {
+	// 	min-width: 750px;
+	// }
+	// @media (max-width: ($md3 + px)) {
+	// 	min-width: none;
+	// 	padding: 0 10px;
+	// }
 }
 //<MAIN LAYOUT>=================================================================================
 
