--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,7 @@ body {
 @import "blocks/brands";
 @import "blocks/areas";
 @import "blocks/partners";
+@import "blocks/call";
 @import "blocks/footer";
 @import "blocks/form";
 @import "blocks/service-main";
