--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -60,10 +60,81 @@
 		}
 		.compact_text {
 			margin-top: 8px;
-			width: 373px;
+			max-width: 373px;
 		}
 	}
 	.button {
 		margin-top: 30px;
+	}
+}
+
+@media (max-width: 991.98px){
+	.about {
+		&_descr {
+			grid-template-columns: 1fr 1fr 1fr;
+		}
+		.big_title {
+			font-size: 24px;
+		}
+	}
+}
+
+@media (max-width: 767.98px) {
+	.about {
+		.container {
+			width: 100%;
+			padding: 0 20px;
+		}
+		.big_title {
+			font-size: 34px;
+		}
+		.compact_text {
+			max-width: 100%;
+		}
+		&_descr {
+			grid-template-columns: 1fr 1fr;
+			.item_1 {
+				grid-column: 1/3;
+				border-bottom: $border;
+				padding-bottom: 20px;
+			}
+			.item_2 {
+				border-bottom: $border;
+				&::before {
+					display: none;
+				}
+			}			
+			.item_3 {
+				border-left: $border;
+				border-bottom: $border;
+				padding-left: 10px;
+				&::before {
+					display: none;
+				}
+			}		
+		}
+	}
+}
+
+@media (max-width: 576.98px) {
+	.about {
+		&_descr {
+			grid-template-columns: 1fr;
+			.item_1 {
+				grid-column: 1/2;
+			}
+			.item_3 {
+				border-left: none;
+				border-bottom: none;
+				padding-left: 0;
+			}
+		}
+		.big_title {
+			font-size: 24px;
+			line-height: 26px;
+		}
+		&_item {
+			padding-right: 0;
+		}
 	}
 }
