--- a/src/scss/blocks/brands.scss
+++ b/src/scss/blocks/brands.scss
@@ -22,3 +22,11 @@
 		}
 	}
 }
+
+@media (max-width: 1199.98px){}
+
+@media (max-width: 991.98px){}
+
+@media (max-width: 767.98px) {}
+
+@media (max-width: 576.98px) {}
