--- a/src/scss/blocks/choice.scss
+++ b/src/scss/blocks/choice.scss
@@ -43,3 +43,11 @@
 		align-self: flex-start;
 	}
 }
+
+@media (max-width: 1199.98px){}
+
+@media (max-width: 991.98px){}
+
+@media (max-width: 767.98px) {}
+
+@media (max-width: 576.98px) {}
