--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -12,26 +12,34 @@
 		background: #FFFFFF;
 	}
 	&_wrapper {
-		display: flex;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
 		min-height: 390px;
+		column-gap: 30px;
 	}
 	&_images {
 		display: flex;
 		padding: 40px 0;
 		gap: 14px;
-		margin-right: 15px;
+		padding-right: 15px;
+		border-right: 1px solid rgba($color: #9E9FBE, $alpha: 0.6);
+	}
+	&_image {
 		img {
 			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			object-fit:contain;
 		}
+
 	}
 	input {
 		background-color: $first-color;
 	}
 	&_form {
 		position: relative;
-		padding: 40px 0;
-		padding-left: 15px;
-		border-left: 1px solid rgba($color: #FFFFFF, $alpha: 0.6);
+		padding: 40px 0 ;
 		&_title {
 			font-family: 'Fjalla One';
 			font-weight: 400;
@@ -42,14 +50,14 @@
 		}
 		&_input{
 			margin-top: 15px;
-			width: 350px;
+			width: 100%;
 			height: 18px;
 			font-family: 'Open Sans';
 			color:#FFFFFF;
 			font-weight: 400;
 			font-size: 14px;
 			line-height: 19px;
-			border-bottom: 1px solid rgba($color: #FFFFFF, $alpha: 0.6);
+			border-bottom: 1px solid rgba($color: #9E9FBE, $alpha: 0.6);
 			&::placeholder {
 				text-transform: uppercase;
 				color: #FFFFFF;
@@ -60,7 +68,7 @@
 			display: block;
 			margin-top: 20px;
 			padding: 7px 114px;
-			width: 350px;
+			width: 100%;
 			height: 40px;
 			background: #FFFFFF;
 			border-radius: 50px;
@@ -72,8 +80,94 @@
 			&:hover {
 				color: #FFFFFF;
 				background: $first-color;
-				border: solid 1px #FFFFFF;
+				border: solid 1px #9E9FBE;
 			}
+		}
+	}
+}
+
+@media (max-width: 1199.98px){
+	.contact {
+		.container {
+			width: 100%;
+			padding: 0 20px;
+		}
+	}
+}
+
+@media (max-width: 991.98px){
+	.contact {
+		&_image {
+			width: 100%;
+		}
+		.image_none {
+			display: none;
+		}
+		&_wrapper {
+			min-height: 100%;
+		}
+	}
+}
+
+@media (max-width: 767.98px) {
+	.contact {
+		height: 460px;
+		padding-top: 60px;
+		.title {
+			text-align: center;
+		}
+		&_wrapper {
+			column-gap: 10px;
+			border-bottom: 1px solid rgba($color: #9E9FBE, $alpha: 0.6);
+		}
+		&_images {
+			padding: 20px 10px;
+		}
+		&_image {
+			max-height: 265px;
+			max-width: 290px;
+		}
+		&_form {
+			width: 290px;
+			padding-right: 10px;
+		}
+	}
+}
+
+@media (max-width: 576.98px) {
+	.contact {
+		height: 551px;
+		margin-top: 100px;
+		padding: 15px 0 20px 0;
+		.container {
+			padding: 0 10px;
+		}
+		.title {
+			font-size: 40px;
+			line-height: 42px;
+			text-align: left;
+		}
+		&_wrapper {
+			grid-template-columns: 1fr;
+			border-bottom: none;
+		}
+		&_images {
+			height: 150px;
+			padding: 10px 0 20px 0;
+			border-right: none;
+			gap: 10px;
+		}
+		.image_none {
+			display: block;
+		}
+		&_image {
+			min-height: 150px;
+		}
+		&_form {
+			text-align: center;
+			width: 100%;
+			padding-right: 0;
+			height: 265px;
 		}
 	}
 }
