--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -34,6 +34,9 @@
 		display: flex;
 		flex-direction: column;
 	}
+	&_list_2 {
+		display: none;
+	}
 	&_name {
 		padding-top: 15px;
 		font-family: 'Open Sans';
@@ -155,7 +158,7 @@
 @media (max-width: 1199.98px){
 	.services {
 		.container {
-			max-width: 970px;
+			max-width: 100%;
 		}
 		&_list {
 			padding-left: 20px;
@@ -188,7 +191,7 @@
 		}
 		&_first {
 			position:static;
-			height: 195px;
+			height: 100%;
 			border-left: none;
 			width: 100%;
 		}
@@ -338,6 +341,7 @@
 }
 @media (max-width: 576.98px) {
 	.services {
+		padding-top: 50px;
 		.container {
 		max-width: 100%;
 		padding: 0 10px;
@@ -350,7 +354,7 @@
 			display: none;
 		}
 		&_first {
-			height: 340px;
+			padding-bottom: 50px;
 		}
 		&_descr {
 			flex-direction: column;
