--- a/src/scss/blocks/brands.scss
+++ b/src/scss/blocks/brands.scss
@@ -6,6 +6,9 @@
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(6, 208px);
 	}
+	&_button {
+		display: none;
+	}
 	&_item {
 		display: flex;
 		align-items: center;
@@ -23,10 +26,73 @@
 	}
 }
 
-@media (max-width: 1199.98px){}
+@media (max-width: 991.98px){
+	.brands {
+		&_items {
+			grid-template-rows: repeat(6, 100px);
+		}
+		&_item {
+			padding: 25px;
+			img {	
+				width: 100%;
+				height: 100%;
+				transition: none;
+				object-fit: contain;
+				&:hover {
+					transform: none;
+				}
+			}
+		}
+	}
+}
 
-@media (max-width: 991.98px){}
+@media (max-width: 767.98px) {
+	.brands {
+		.container {
+			padding: 0 20px;
+		}
+		&_items {
+			grid-template-rows: repeat(6, 84px);
+		}
+	}
+}
 
-@media (max-width: 767.98px) {}
-
-@media (max-width: 576.98px) {}
+@media (max-width: 576.98px) {
+	.brands {
+		margin-top: 100px;
+		.container {
+			padding: 0 20px;
+		}
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+		}
+		&_items {
+			margin-top: 30px;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: 60px 60px 60px 60px 0 0 0 0;
+		}
+		&_item {
+			padding: 15px;
+			img {	
+				width: 100%;
+				height: 100%;
+			}
+		}
+		&_button {
+			margin: 0 auto;
+			width: 100%;
+			display: block;
+			margin-top: 10px;
+			font-family: 'Open Sans';
+			font-style: normal;
+			font-weight: 600;
+			font-size: 14px;
+			line-height: 110%;
+			text-align: center;
+		}
+		.hidden_rows {
+			grid-template-rows: repeat(8, 60px);
+		}
+	}
+}
