--- a/src/scss/blocks/choice.scss
+++ b/src/scss/blocks/choice.scss
@@ -6,8 +6,8 @@
 		justify-content: space-between;
 	}
 	.title {
-		width: 388px;
-		width: 25%;
+		min-width: 388px;
+		height: 120px;
 	}
 	&_items {
 		display: flex;
@@ -22,6 +22,9 @@
 		border: 1px solid rgba(34, 35, 37, 0.6);
 		border-radius: 6px;
 		margin-right: 15px;
+		&_icon {
+			height: 100%;
+		}
 		&_subtitle {
 			margin-top: 67px;
 			font-family: 'Fjalla One';
@@ -44,10 +47,103 @@
 	}
 }
 
-@media (max-width: 1199.98px){}
+@media (max-width: 1460px){}
+	.choice {
+		.container {
+			padding-right:20px;
+		}
+		&_items {
+			position: relative;
+		}
+		&_item {
+			&_subtitle {
+				font-size: 31px;
+				margin-top: 40px;
+			}
+		}
+	}
 
-@media (max-width: 991.98px){}
+@media (max-width: 1350.98px){
+	.choice {
+   	.container {
+			display: block;
+			width: 100%;
+		}
+		.title {
+			width: 400px;
+		}
+		&_items {
+			align-items: start;
+			justify-content: space-between;
+			max-width: 955px;
+			margin: 0 auto;
+			margin-top: 30px;
+			min-height: 400px;
+			flex-wrap: wrap;
+		}
+		&_item {
+			margin-top: 20px;
+			width: 310px;
+			height: 346px;
+			&_subtitle {
+				margin-top: 40px;
+			}
+			&_icon {
+				height: 86px;
+				width: 84px;
+			}
+		}
+		.item_center {
+			margin: 0 auto;
+			margin-top: 20px;
+		}
 
-@media (max-width: 767.98px) {}
+	}
+}
 
-@media (max-width: 576.98px) {}
+@media (max-width: 991.98px){
+	
+}
+
+@media (max-width: 767.98px) {
+	.choice {
+		.container {
+			padding: 0 20px;
+		}
+		&_items {
+			align-items: center;
+			justify-content: center;
+			max-width: 955px;
+			gap: 15px;
+		}
+		&_item {
+			padding: 14px;
+			width: 291px;
+			height: 346px;
+			margin-right: 0;
+		}
+	}
+}
+
+@media (max-width: 576.98px) {
+	.choice {
+		.container {
+			padding: 0 10px;
+		}
+		.title {
+			font-size: 40px;
+			max-width: 100%;
+			min-width: 265px;
+		}
+		&_items {
+			width: 300px;
+			margin: 0 auto;
+		}
+		&_item {
+			padding: 14px;
+			width: 300px;
+			min-height: 300px;
+			margin-right: 0;
+		}
+	}
+}
