--- a/src/scss/blocks/common.scss
+++ b/src/scss/blocks/common.scss
@@ -68,3 +68,20 @@
 		transform: rotate(180deg);
 	}
 }
+
+@media (max-width: 1460px){
+	
+}
+
+@media (max-width: 1199.98px){}
+@media (max-width: 991.98px){}
+@media (max-width: 767.98px){
+	.button {
+		&:hover {
+			background: $first-color;
+			color: #FFFFFF;
+			border: none;
+		}
+	}
+}
+@media (max-width: 576.98px) {}
