--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -5,7 +5,7 @@
 		display: flex;
 	}
 	&_social {
-		width: 160px;
+		width: 25%;
 		margin-right: 205px;
 		margin-top: 50px;
 		&_icons {
@@ -28,7 +28,7 @@
 		color: $first-color;
 	}
 	&_info {
-		width: 100%;
+		width: 75%;
 		&_wrapper {
 			display: flex;
 			min-height: 180px;
@@ -105,10 +105,120 @@
 	}
 }
 
-@media (max-width: 1199.98px){}
+@media (max-width: 1199.98px){
+	.footer {
+		&_social {
+			margin-right: 0;
+		}
+		&_menu {
+			margin-left: 45px;
+		}
+	}
+}
 
-@media (max-width: 991.98px){}
+@media (max-width: 991.98px){
+	.footer {
+		&_info {
+			width: 80%;
+			&_wrapper {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+				flex-direction: column;
+				column-gap: 10px;
+			}
+		}
+		&_social {
+			width: 50%;
+			padding-right: 20px;
+		}
+		&_menu {
+			margin-top: 25px;
+			&_1 {
+				grid-column: 1/3;
+			}
+		}
+		&_contacts {
+			margin-top: 20px;
+		}
+		&_authorship {
+			padding: 15px 0;
+		}
+	}
+}
 
-@media (max-width: 767.98px) {}
+@media (max-width: 767.98px) {
+	.footer {
+		&_wrapper {
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-template-rows: repeat(3, auto);
+		}
+		&_social {
+			width: 100%;
+			margin-top: 30px;
+		}
+		&_info {
+			width: 100%;
+			&_wrapper {
+				display: flex;
+				padding-top: 0;
+				border-left: none;
+				width: 100%;
+				gap:0;
+			}
+		}
+		&_menu {
+			display: flex;
+			justify-content: space-between;
+			margin-left: 0;
+			width: 100%;		
+			&_list {
+				margin-top: 0;
+				width: 50%;
+			}
+			&_1 {
+				grid-column: 1/2;
+			}
+		}
+		&_contacts {
+			margin-top: 0;
+			width: 50%;
+			padding-left: 25px;
+		}
+		&_address {
+			width: 100%;
+		}
+	}
+}
 
-@media (max-width: 576.98px) {}
+@media (max-width: 576.98px) {
+	.footer {
+		&_social {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(2, auto);
+		}
+		.logo {
+			grid-row: 1/3;
+		}
+		&_menu {
+			display: block;
+			&_list {
+				margin-top: 30px;
+				width: 100%;
+			}
+		}
+		&_contacts {
+			margin-top: 20px;
+			width: 100%;
+		}
+		&_authorship {
+			display: block;
+			height: 50px;
+			padding: 0;
+			div {
+				margin-top: 5px;
+			}
+		}
+	}
+}
