--- a/src/scss/blocks/partners.scss
+++ b/src/scss/blocks/partners.scss
@@ -10,7 +10,6 @@
 		right: -50%;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(3, 91px);
-
 	}
 	&_icon {
 		display: flex;
@@ -21,10 +20,38 @@
 	}
 }
 
-@media (max-width: 1199.98px){}
+@media (max-width: 991.98px){
+	.partners {
+		.container {
+			width: 100%;
+			padding: 0 20px;
+		}
+		&_list {
+			width: 100%;
+			right: 0;
+		}
+	}
+}
 
-@media (max-width: 991.98px){}
-
-@media (max-width: 767.98px) {}
-
-@media (max-width: 576.98px) {}
+@media (max-width: 576.98px) {
+	.partners {
+		margin-top: 100px;
+		.container {
+			padding: 0 10px;
+		}
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+		}
+		&_list {
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(3, 85px);
+		}
+		&_icon {
+			padding: 10px 0;
+			img {
+				width: 60%;
+			}
+		}
+	}
+}
