--- a/src/scss/blocks/service-book.scss
+++ b/src/scss/blocks/service-book.scss
@@ -1,6 +1,6 @@
 .book-service {
 	margin-top: 120px;
-	height: 540px;
+	min-height: 540px;
 	padding: 70px 0px;
 	background-color: $first-color;
 	.container{
@@ -10,7 +10,7 @@
 	&_title {
 		color: #FFFFFF;
 		margin-bottom: 15px;
-		width: 605px;
+		max-width: 605px;
 		margin-right: 140px;
 		line-height: 66px;
 	}
@@ -42,7 +42,7 @@
 	&_button {
 		display: block;
 		margin-top: 35px;
-		padding: 7px 114px;
+		padding: 0 50px;
 		width: 100%;
 		height: 40px;
 		background: #FFFFFF;
@@ -55,7 +55,47 @@
 		&:hover {
 			color: #FFFFFF;
 			background: $first-color;
-			border: solid 2px #FFFFFF;
+			border: solid 1px #FFFFFF;
 		}
 	}
+}
+
+@media (max-width: 991.98px){
+	.book-service {
+		min-height: 650px;
+		padding-bottom: 50px;
+		.container {
+			flex-direction: column;
+		}
+		&_wrapper {
+			width: 100%;
+			justify-content: center;
+			align-items: center;
+		}
+		&_button {
+			margin-top: 50px;
+		}
+	}
+}
+
+@media (max-width: 576.98px) {
+	.book-service {
+		margin-top: 100px;
+		padding: 40px 0;
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+			max-width: 343px;
+		}
+		&_text {
+			flex-direction: column;
+			span {
+				width: 100%;
+			}
+		}
+		&_button {
+			margin-top: 30px;
+		}
+	}
+
 }
