--- a/src/scss/blocks/service-brands.scss
+++ b/src/scss/blocks/service-brands.scss
@@ -39,3 +39,63 @@
 		}
 	}
 }
+
+@media (max-width: 1199.98px){
+	.service-brands {
+		&_items {
+			padding-left: 0;
+		}
+	}
+}
+@media (max-width: 767.98px){
+	.service-brands {
+		.title {
+			font-size: 39px;
+			line-height: 40px;
+			max-width: 333px;
+		}
+		&_info {
+			width: 50%;
+			padding-left: 0;
+			padding-bottom: 35px;
+		}
+		&_items {
+			margin-top: 0;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: repeat(3, 103px);
+			padding-left: 0;
+		}
+		&_item {
+			padding: 30px 0;
+			img {	
+				width: 100%;
+				height: 100%;
+				transition: none;
+				object-fit: contain;
+				&:hover {
+					transform: none;
+				}
+			}
+		}
+	}
+}
+@media (max-width: 576.98px) {
+	.service-brands {
+		margin-top: 80px;
+		&_title{
+			max-width: 100%;
+			width: 340px;
+			align-self: start;
+		}
+		&_header {
+			flex-direction: column;
+		}
+		&_info {
+			margin-top: -18px;
+			padding-bottom: 0px;
+		}
+		&_item {
+			grid-template-rows: repeat(3, 70px);
+		}
+	}
+}
