--- a/src/scss/blocks/service-main.scss
+++ b/src/scss/blocks/service-main.scss
@@ -1,18 +1,18 @@
 .service-main {
 	margin-top: 73px;
-	min-width: 900px;
+	max-height: 900px;
 	.container {
 		display: grid;
-		grid-template-columns: 800px auto;
-		grid-template-rows: 290px 270px;
+		grid-template-columns: minmax(550px, 800px) auto;
+		grid-template-rows: auto auto auto;
 		column-gap: 15px;
-		row-gap: 300px;
 	}
 	.title {
 		font-size: 98px;
 		line-height: 98px;
 	}
 	.form {
+		margin-top: 300px;
 		border-top: $border;
 		border-bottom: $border;
 	}
@@ -20,19 +20,134 @@
 		margin-top: 30px;
 	}
 	&_img {
-		grid-row-start: 1;
-		grid-row-end: 3;
-		display: block;
-		object-fit: contain;
+		grid-row: 1/5;
+		position: relative;
+		width: 100%;
+		img {
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			top: 0;
+			left: 0;
+			object-fit: fill;
+		}
 	}
 	&_text {
 		margin-top: 5px;
-		width: 350px;
+		max-width: 350px;
 		font-family: 'Open Sans';
 		text-align: justify;
 		font-weight: 400;
 		font-size: 14px;
 		line-height: 17px;
 		color: $first-color;
+	}
+}
+
+@media (max-width: 1199.98px){
+	.service-main {
+		.container {
+			padding-right: 20px;
+			grid-template-columns: 50% 50%;
+		}
+		.title {
+			font-size: 55px;
+			line-height: 60px;
+		}
+		.form {
+			width: 100%;
+		}
+	} 
+}
+@media (max-width: 991.98px){
+	.service-main {
+		min-height: 700px;
+		.container {
+			grid-template-columns: minmax(290px, 1fr) auto;
+			grid-template-rows: auto auto auto;
+		}
+		&_img {
+			order: 2;
+			grid-row: 2/4;
+		}
+		&_title {
+			order: 1;
+			grid-column: 1/3;
+		}
+		&_text {
+			order: 3;
+		}
+		.form {
+			margin-top: 200px;
+			order: 4;
+		}
+		.title {
+			font-size: 98px;
+			line-height: 98px;
+		}
+	}
+}
+@media (max-width: 767.98px){
+	.service-main {
+		margin-top: 20px;
+		min-height: 600px;
+		.container {
+			grid-template-columns: 50% 50%;
+			grid-template-rows: 200px 130px auto;
+			column-gap: 20px;
+			column-gap: 10px;
+			padding-right: 10px;
+		}
+		.form {
+			margin-top: 0;
+		}
+		.title {
+			font-size: 80px;
+		}
+	}
+}
+@media (max-width: 576.98px) {
+	.service-main {
+		min-height: 800px;
+		.container {
+			grid-template-columns: 100%;
+			grid-template-rows: repeat(5, auto);
+			row-gap: 15px;
+			justify-items: center;
+		}
+		&_img {
+			position: static;
+			max-height: 360px;
+			max-width: 387px;
+			order: 3;
+			grid-row: 3/4;
+			img {
+				position: static;
+				height: 100%;
+				width: 100%;
+				top: 0;
+				left: 0;
+				object-fit: contain;
+			}
+		}
+		&_title {
+			order: 1;
+			grid-column: 1/2;
+		}
+		&_text {
+			order: 2;
+		}
+		.form {
+			order: 4;
+			grid-row: 4/5;
+		}
+		.title {
+			font-size: 50px;
+			line-height: 50px;
+		}
+		.button {
+			margin-top: 15px;
+			margin-bottom: 0;
+		}
 	}
 }
