--- a/src/scss/blocks/service-problems.scss
+++ b/src/scss/blocks/service-problems.scss
@@ -24,6 +24,8 @@
 		font-weight: 400;
 		border-top: $border;
 		img {
+			width: 100%;
+			height: 100%;
 			object-fit: contain;
 		}
 	}
@@ -48,3 +50,68 @@
 	}
 }
 
+@media (max-width: 767.98px){
+	.problems {
+		margin-top: 100px;
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+		}
+		&_info {
+			width: 50%;
+		}
+		&_subtitle{
+			&_1 {
+				display: block;			
+			}
+
+		}
+		&_item {
+			&_img {
+				margin-top: 15px;
+			}
+		}
+		&_text{
+			flex-direction: column;
+			gap: 5px;
+			margin-left: 20px;
+			span {
+				width: 100%;
+			}
+			&_1 {
+				margin-top: 30px;
+			}
+		}
+	}
+}
+@media (max-width: 576.98px) {
+	.problems {
+		margin-top: 80px;
+		&_title {
+			flex-direction: column;
+			align-items: start;
+			width: 100%;
+		}
+		.title {
+			width: 100%;
+		}
+		&_info {
+			width: 100%;
+			padding-left: 0;
+			margin-top: 30px;
+		}
+		&_item {
+			flex-direction: column;
+			&_img {
+				width: 300px;
+			}
+		}
+		&_subtitle {
+			width: 100%;
+		}
+		&_text {
+			width: 100%;
+			margin-left: 0;
+		}
+	}
+}
