--- a/src/scss/blocks/service-questions.scss
+++ b/src/scss/blocks/service-questions.scss
@@ -48,6 +48,47 @@
 			margin-top: 15px;
 			font-size: 14px;
 			line-height: 17px;
+			&_active {
+				display: block;
+			}
+		}
+	}
+}
+
+@media (max-width: 1460px){
+	.questions {
+		&_item {
+			width: 70%;
+		}
+	}
+}
+
+@media (max-width: 767.98px){
+	.questions {
+		margin-top: 100px;
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+		}
+		&_item {
+			width: 100%;
+			padding-bottom: 0;
+			&_subtitle {
+				flex-direction: column;
+			}
+			&_name {
+				margin-top: 20px;
+				width: 100%;
+			}
+			&_plus {
+				width: 20px;
+				height: 20px;
+				&::before,
+				&::after {
+				right: 0;
+				width: 20px;
+				}
+			}
 		}
 	}
 }
