--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,16 +67,13 @@ body {
 	max-width: 1600px;
 	padding: 0 70px;
 	margin: 0 auto;
-	// @media (max-width: ($md1 + px)) {
-	// 	min-width: 970px;
-	// }
-	// @media (max-width: ($md2 + px)) {
-	// 	min-width: 750px;
-	// }
-	// @media (max-width: ($md3 + px)) {
-	// 	min-width: none;
-	// 	padding: 0 10px;
-	// }
+	@media (max-width: 991.98px) {
+		width: 100%;
+		padding: 0 20px;
+	}
+	@media (max-width: 767.98px){
+		padding: 0 10px;
+	}
 }
 //<MAIN LAYOUT>=================================================================================
 
